@@ -243,7 +243,7 @@ public:
  * is released even if a thread exits via <thr_exit>!
  */
 template <class ACE_LOCK>
-class ACE_TSS_Guard : private ACE_Copy_Disabled
+class ACE_TSS_Guard
 {
 public:
   // = Initialization and termination methods.
@@ -293,6 +293,9 @@ private:
   // FUZZ: disable check_for_ACE_Guard
   typedef ACE_Guard<ACE_LOCK> Guard_Type;
   // FUZZ: enable check_for_ACE_Guard
+
+  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_TSS_Guard<ACE_LOCK> &))
+  ACE_UNIMPLEMENTED_FUNC (ACE_TSS_Guard (const ACE_TSS_Guard<ACE_LOCK> &))
 };
 
 /**
