@@ -1,3 +1,9 @@
+Mon Sep  8 12:25:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Guard_T.h:
+          Use ACE_UNIMPLEMENTED_FUNC because that maps to deleted
+          operations with C++11
+
 Mon Sep  8 12:12:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_Log_Msg_Attributes.h:
